fix: app overflow

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -38,7 +38,7 @@
 #app {
 
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh - .5rem);
 
 }
 
